web-infras/parser/tests/fixtures/babel/es2015/duplicate-proto/in-new-expression/output.txt
[SyntaxError]: property name __proto__ appears more than once in object literal (1,25)
1|new {__proto__: Number, __proto__: Number}.__proto__;
 |                       ^
